I updated the overview and changed some icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -275,3 +275,19 @@ html {
   transform: translateZ(0);
   will-change: transform;
 }
+
+/* Shimer */
+@keyframes shimmer {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.animate-shimmer {
+  animation: shimmer 1.5s infinite;
+  background-size: 200% 100%;
+}
+
